--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.KimiChat_test06"
         tools:targetApi="31">
         <activity
-            android:name=".SettingAndAbout"
+            android:name=".AboutActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
